--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=prueba-autos
+server.port=8080
 
 # Conexión a SQL Server
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=gestion_autos;encrypt=true;trustServerCertificate=true
@@ -13,4 +14,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
-server.port=8080
+# Spring security
+spring.security.user.name=admin
+spring.security.user.password=1234
+
