--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=prueba-autos
 server.port=8080
+jwt.secret=IUlsbzFqKvQTxG3WO_Uh9rTrrgsmUFyx_L7PcOW9z34
 
 # Conexión a SQL Server
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=gestion_autos;encrypt=true;trustServerCertificate=true
