--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,6 @@ spring.jpa.defer-datasource-initialization=true
 # Spring security
 spring.security.user.name=admin
 spring.security.user.password=1234
+logging.level.org.springframework.web.cors=DEBUG
+
 
